# cockpit32-hard-prompt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build_backend.py  cockpit32  pyproject.toml
.github/workflows/: test.yml
docs/: acceptance_v0.md  avb-report.md  engineering_plan.md  stage3-handoff.md  validation-ledger.md
docs/notion-source/: 00-index.md  01-cockpit-32-tool-page.md  02-ai-planned-personal-software-tool-workflow.md  03-implementation-procedure.md  04-implementation-engineer-agent.md  05-engineering-method-selection-test-architecture-guide.md  06-preferred-agent-harness-mcp-stack.md  07-michael-shears-working-profile-ai-collaboration-guide.md  08-engineering-planning-procedure.md  09-commissioning-procedure.md  README.md
docs/validation/: ai_readability_test.md  e2e_cli_workflow_transcript.txt  full_suite.txt  m0_harness_bringup.txt  m1_session_skeleton.txt  m2_build_capture.txt  m3_flash.txt  m4_monitor_capture.txt  m5_notes_summary.txt  m6_gui_shell.txt  stage3-validation.md  validation_ledger.md
src/cockpit32/: __init__.py  cli.py  models.py
tests/: test_cli.py  test_gui_smoke.py  test_idf_runner.py  test_sessions.py  test_summaries.py
tests/acceptance/: test_cli_doctor.py  test_cli_workflow.py
tests/contract/: test_session_contract.py  test_summary_contract.py
tests/fakes/: fake_runner.py
tests/golden/: session.json  summary.json  summary.md
tests/gui/: test_main_window_smoke.py
tests/unit/: test_idf_runner_build.py  test_idf_runner_flash.py  test_models.py  test_monitor.py  test_ports.py  test_sessions.py  test_summaries.py
(+18 files in other folders)
