[project]
name = "cockpit32"
version = "0.1.0"
description = "Local ESP32 mission-control tool: build/flash/monitor session capture for AI-assisted embedded debugging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
serial = ["pyserial>=3.5"]

[project.scripts]
cockpit32 = "cockpit32.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit32"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
